# uPtt

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: build.yml  docs.yml
_sources/: index.rst.txt
_sources/developer_guide/: index.rst.txt
_sources/faq/: index.rst.txt
_static/: documentation_options.js
developer_guide/: index.html
docs/: conf.py  index.rst  robots.txt
docs/developer_guide/: index.rst
faq/: index.html
installer/mac/: main.sh
installer/uPtt.app/Contents/: Info.plist  document.wflow
installer/uPtt.app/Contents/MacOS/: Automator Application Stub  uptt.sh
installer/uPtt.app/Contents/Resources/: uPtt.icns
installer/uPtt.app/Contents/_CodeSignature/: CodeResources
