[tool.poetry]
name = "uptt"
version = "0.1.0"
description = ""
authors = ["CodingMan <pttcodingman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.3.7"
sphinx-sitemap = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
